# aerial_robot_nerve

./: README.md
spinal/: CMakeLists.txt  package.xml  plugin.xml
spinal/mcu_project/boards/stm32H7_v2/: spinal.ioc
spinal/mcu_project/boards/stm32H7_v2/Src/: main.c
spinal/mcu_project/lib/My_Lib/battery_status/: battery_status.h  battery_status_ros_module.cpp  battery_status_ros_module.h
spinal/mcu_project/lib/My_Lib/configs/STM32H7_v2/: config.h
spinal/mcu_project/lib/My_Lib/flight_control/: flight_control.cpp  flight_control.h  flight_control_types.h
spinal/mcu_project/lib/My_Lib/flight_control/attitude/: attitude_control.cpp  attitude_control.h
spinal/mcu_project/lib/My_Lib/flight_control/board/: flight_control_ros_module.cpp  flight_control_ros_module.h
spinal/mcu_project/lib/My_Lib/flight_control/simulation/: flight_control_ros_module.cpp  flight_control_ros_module.h
spinal/mcu_project/lib/My_Lib/ros_utils/: ros_module_base.hpp
spinal/mcu_project/lib/My_Lib/sensors/baro/: baro_ros_module.h
spinal/mcu_project/lib/My_Lib/sensors/encoder/: mag_encoder_ros_module.h
spinal/mcu_project/lib/My_Lib/sensors/gps/: gps_backend.cpp  gps_backend.h  gps_ros_module.cpp  gps_ros_module.h  gps_ublox.cpp
spinal/mcu_project/lib/My_Lib/sensors/imu/: imu_ros_module.h
spinal/mcu_project/lib/My_Lib/servo/: servo.cpp  servo.h  servo_ros_module.cpp  servo_ros_module.h
spinal/mcu_project/lib/My_Lib/servo/drivers/: servo_base_driver.h
spinal/mcu_project/lib/My_Lib/servo/drivers/Dynamixel/: dynamixel_serial.cpp  dynamixel_serial.h
spinal/mcu_project/lib/My_Lib/servo/drivers/kondo_servo/: kondo_servo.cpp  kondo_servo.h
spinal/mcu_project/lib/My_Lib/state_estimate/: state_estimate_ros_module.cpp  state_estimate_ros_module.h
spinal/mcu_project/lib/My_Lib/thruster/: thruster_types.h
spinal/mcu_project/lib/My_Lib/thruster/board/: thruster_manager.cpp  thruster_manager.h  thruster_ros_module.cpp  thruster_ros_module.h
spinal/mcu_project/lib/My_Lib/thruster/board/drivers/: dshot_esc.cpp  dshot_esc.h  esc_base_driver.h  esc_telem.cpp  esc_telem.h  pwm_esc.cpp  pwm_esc.h
spinal/mcu_project/lib/My_Lib/thruster/simulation/: thruster_manager.cpp  thruster_manager.h  thruster_ros_module.cpp  thruster_ros_module.h
spinal/resource/: thruster_monitor.ui
spinal/scripts/: make_microros_libraries.py  topic_hz_checker.py
spinal/src/: spinal_namespace_bridge.cpp
spinal/src/spinal/: board_configurator.py  servo_monitor.py  thruster_monitor.py
spinal_msgs/msg/: Pwms.msg
